include_directories(${CMAKE_SOURCE_DIR}/src)
link_directories(${CMAKE_SOURCE_DIR}/src)

# initial version (C)
#add_executable(test_init init.cpp)
#target_link_libraries(test_init transport)

# TP1
#add_executable(test_tp1 tp1.cpp)
#target_link_libraries(test_tp1 transport)

# TP2
#add_executable(test_tp2 tp2.cpp)
#target_link_libraries(test_tp2 transport)